--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "OSL-3.0"
     ],
     "require": {
-        "magento/framework": "100.1.*|101.0.*|102.0.*",
+        "magento/framework": ">102.0",
         "gladd/module-base": "^2.0"
     },
     "type": "magento2-language",
